# CMaizePublicDepend

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: unit_testing.yaml
cmake/: get_cmaize.cmake
include/cmaize_public_depend/: cmaize_public_depend.hpp
include/cmake_public_depend/: cmake_public_depend.hpp
src/cmaize_public_depend/: cmaize_public_depend.cpp
src/cmake_public_depend/: cmake_public_depend.cpp
test/cmaize_public_depend/: test_cmaize_public_depend.cpp
